New route to perform a new analysis of the email
